# MachMessagesCPP

./: .gitignore  CMakeLists.txt  README.md
MachMessages/: Logger.h  MachConnection.h  MachConnection.mm  MachExceptions.h  MachMessage.h  MachMessage.mm  MachMessageComplex.h  MachMessageComplex.mm  MachMessageData.h  MachMessageData.mm  MachMessageDescriptor.h  MachMessageDescriptor.mm  MachPort.h  MachPort.mm
MachServices/: MachServiceBase.h  MachServiceBase.mm
test/: MachService.h  MachService.mm
